# STAG_vykazy

./: .gitignore  README.md  main.py  p.py  pyproject.toml  requirements.txt  test.ipynb  test.py  utils.py
.streamlit/: config.toml
app/: app.py  utils.py
v1/: main.py
