[tool.poetry]
name = "stag-vykazy"
version = "0.1.0"
description = "Aplikace prot tvorbu výkazů vyučujících."
authors = ["yoptohlejepeta <peta.kotlan@seznam.cz>"]
readme = "README.md"
packages = [{include = "stag_vykazy"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
streamlit = "^1.31.1"
holidays = "^0.42"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
xlsxwriter = "^3.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
