[tool.poetry]
name = "stag-vykazy"
version = "2.0.0"
description = ""
authors = ["yoptohlejepeta <peta.kotlan@seznam.cz>"]
readme = "README.md"
packages = [{include = "stag_vykazy"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
reflex = "^0.5.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
